<resources>
    <string name="app_name">ChatApp</string>
    <string name="email_field_hint">Phone number or email</string>
    <string name="password_field_hint">Password</string>
    <string name="log_in_button">Log in</string>
    <string name="new_account_button">Create new Account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="title_activity_bottom_nav_bar">BottomNavBar</string>
    <string name="title_home">Chats</string>
    <string name="title_dashboard">People</string>
    <string name="title_notifications">Profile</string>
    <string name="theme_mode_dialg_title">Theme mode</string>
    <string name="name_required_error">name is required</string>
    <string name="valid_email_error">Please enter a valid email</string>
    <string name="password_length_error">password must be greater than 6 characters</string>
    <string name="confirm_password_error">re-enter the same password</string>
    <string name="current_password_require_error">current password required</string>
    <string name="empty_new_password_field_error">Please create new password</string>
    <string name="change_password">Change password</string>
    <string name="online">online</string>
    <string name="offline">offline</string>
    <string name="delete_message_dialog_title">Delete message</string>
    <string name="delete_message_dialog_permission">Do you really want to delete this message ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="search_hint">Search friends</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="account">Account</string>
    <string name="edit_name">Edit name</string>
    <string name="preferences">Preferences</string>
    <string name="dark_mode">Dark mode</string>
    <string name="notifications">Notifications</string>
    <string name="sign_out">Sign out</string>
    <string name="type_message_hint">Type message…</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>

</resources>