<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_chat">

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.maouni92.messengerapp.ui.chats.ChatsFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_chats" />

    <fragment
        android:id="@+id/navigation_people"
        android:name="com.maouni92.messengerapp.ui.people.PeopleFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_people" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.maouni92.messengerapp.ui.profile.ProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_profile" />
</navigation>