<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.ChangePassword">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/change_pass_toolbar"
        app:layout_constraintTop_toTopOf="parent"
        android:background="?android:attr/windowBackground" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/current_pass_et"
        android:hint="@string/current_password"
        android:paddingHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        android:inputType="textPassword"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/new_pass_et"
        android:hint="@string/new_password"
        android:paddingHorizontal="10dp"
        android:layout_marginHorizontal="10dp"
        android:inputType="textPassword"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confirm_pass_et"
        android:hint="@string/confirm_password"
        android:paddingHorizontal="10dp"
        android:layout_marginHorizontal="10dp"
        android:inputType="textPassword"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/change_pass_button"
        android:text="@string/change_password"
        android:background="@drawable/button_selector_1"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="16dp"
        />
</LinearLayout>