<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment"
    android:orientation="vertical"
    android:isScrollContainer="false"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
      >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image_view"
            android:layout_width="136dp"
            android:layout_height="136dp"
            android:src="@drawable/ic_person"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.15" />

        <TextView
            android:id="@+id/profile_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image_view" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/account"
            android:layout_marginLeft="16dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_name_tv" />





        <TextView
            android:id="@+id/edit_name_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="56dp"
            android:layout_marginTop="12dp"
            android:paddingVertical="14dp"
            android:text="@string/edit_name"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/settings_items_selector"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />
        <ImageView
            android:id="@+id/edit_name_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="16dp"
            android:src="@drawable/ic_person"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />



        <TextView
            android:id="@+id/change_pass_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:paddingStart="56dp"
            android:paddingVertical="14dp"
            android:background="@drawable/settings_items_selector"
            android:text="@string/change_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_name_item" />
        <ImageView
            android:id="@+id/change_pass_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="16dp"
            android:src="@drawable/ic_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_name_item" />


        <TextView
            android:id="@+id/preferences_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="16dp"
            android:text="@string/preferences"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/change_pass_icon" />



        <TextView
            android:id="@+id/dark_mode_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/settings_items_selector"
            android:layout_marginTop="10dp"
            android:paddingVertical="14dp"
            android:paddingStart="56dp"
            android:text="@string/dark_mode"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/preferences_title" />
        <ImageView
            android:id="@+id/dark_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:src="@drawable/ic_dark_mode"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/preferences_title" />


        <TextView
            android:id="@+id/notification_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/settings_items_selector"

            android:paddingVertical="14dp"
            android:paddingStart="56dp"
            android:text="@string/notifications"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dark_mode_item" />
        <ImageView
            android:id="@+id/notifications_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:src="@drawable/ic_notifications"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dark_icon" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/notifications_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="16dp"
            android:checked="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dark_mode_item" />




        <TextView
            android:id="@+id/logout_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:paddingVertical="14dp"
            android:paddingStart="56dp"
            android:text="@string/sign_out"
            android:textColor="#ff0000"
            android:background="@drawable/settings_items_selector"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notification_item" />
        <ImageView
            android:id="@+id/logout_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="22dp"
            android:layout_marginLeft="16dp"
            android:src="@drawable/ic_logout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notifications_icon" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>